--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Coder Forge
+email: webeire@gmail.com
+description: > #
+  A place to learn how to forge out code, to smyth out patterns and designs.
+  Complete beginners welcome, bring your own laptop.
+baseurl: ""
+url: "http://daithi-coombes.github.io/coder-forge" # the base hostname & protocol for your site
+github_username:  daithi-coombes
 
 # Build settings
 markdown: kramdown
